--- a/styles/4-common.css
+++ b/styles/4-common.css
@@ -6,6 +6,7 @@
 body {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     min-height: 100vh;
     color: #484848;
     font-size: 14px;
