--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,102 +1,76 @@
-/*
- * === Filters style ===
- */
-
-/* Filters style */
-.filters {
-    background-color: #ffffff;
+/* search bar */
+div.container {
+    max-width: 1000px;
+    margin: 30px auto;
+    /* text-align: center; */
+}
+section.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #dddddd;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    display: inline-block;
 }
-/* Search button style */
-.filters button{
-    font-size: 18px;
-    background-color: #ff5a5f;
+section.filters button {
+    background-color: #FF5A5F;
     height: 48px;
     width: 20%;
+    border: 0;
     border-radius: 4px;
-    border: none;
-    color: #ffffff;
+    font-size: 18px;
+    color: #FFFFFF;
     float: right;
-    margin: 12px 30px;
+    margin: 11px 30px;
 }
-
-/*change opacity to 90% when the mouse is on the button*/
-.filters button:hover{
-    background-color: rgba(255, 90, 95, .9);
+section.filters button:hover {
+    opacity: .9;
 }
-
-/*locations and amenities*/
-.filters .locations,
-.filters .amenities {
-    display: inline-block;
-    position: relative;
+/* location and amenities part of search bar */
+.locations,
+.amenities {
     height: 100%;
     width: 25%;
+    float: left;
 }
-/*locations*/
-.filters .locations {
-    border-right: 1px solid #dddddd;
+.locations {
+    border-right: 1px solid #DDDDDD;
 }
-/*location Border */
-.filters .locations:hover,
-.filters .amenities:hover {
- background-color: #fafafa;
-}
-/* Locations and amenities popover menu */
-.filters .popover {
- background-color: #fafafa;
- border: 1px solid #dddddd;
- border-radius: 4px;
- display: none;
- position: absolute;
- width: 100%;
-}
-.filters .locations:hover .popover,
-.filters .amenities:hover .popover{
-    display: block;
-}
-.filters .locations ul{
-    padding: 6px 0 6px 0;
-    list-style-type: none;
-}
-.filters .amenities ul{
-    list-style-type: none;
-}
-.filters .locations li {
-    margin: 0 auto 12px 3em;
-}
-.filters .amenities li {
-    margin: 12px auto 12px 30px;
-}
-
-/* places header*/
-.filters h2,
-.filters h3,
-.filters h4 {
-    -webkit-box-sizing: border-box;
-      -moz-box-sizing: border.box;
-            box-sizing: border-box;
-            margin: 0;
-}
-.filters h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 12px auto 0 30px;
-}
-/* Header 3 style */
-.filters h3 {
-    font-size: 1.17em;
+.locations h3,
+.amenities h3 {
     font-weight: 600;
-    height: 50%;
-    padding: 15.5px 0 0 30px;
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    text-align: left;
+    margin-left: 30px;
 }
-.filters h4 {
-    font-size: 14px;
+.locations h4,
+.amenities h4 {
     font-weight: 400;
-    height: 50%;
-    padding: 5px 0 12px 30px;
+    font-size: 14px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: left;
+    margin-left: 30px;
+}
+/* display location and amenities options upon hover */
+.popover {
+    display: none;
+    background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    position: relative;
+    z-index: 1;
+}
+.popover h2 {
+    font-size: 16px;
+}
+li {
+    list-style-type: none;
+    margin-top:10px;
+    margin-bottom: 10px;
+}
+.locations:hover .popover,
+.amenities:hover .popover {
+    display: block;
 }
