--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,20 +1,12 @@
-/*
- * === Global style ===
- */
-
-/* Global style */
-body{
-    color: #484848;
+body {
     margin: 0;
     padding: 0;
-    font: 14px Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
- }
- .container{
-    margin: 30px auto;
+    color: #484848;
+    font-size: 14px;
+    font-family: Circular, "Helvetica Neue", Arial, sans-serif;
+}
+div.container {
     max-width: 1000px;
- }
-
- /*strong*/
- strong {
-   font-weight: bold;
- }
+    margin: 30px auto;
+    /* text-align: center; */
+}
