--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,29 +1,26 @@
-/*
- * === Filters style ===
- */
-
-/* Filters style */
-.filters {
-    background-color: #ffffff;
+div.container {
+    max-width: 1000px;
+    margin: 30px auto;
+    text-align: center;
+}
+section.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #dddddd;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
-/* Search button style */
-.filters button{
-    
-    background: #ff5a5f;
-    border-radius: 4px;
-    border: none;
-    color: #ffffff;
-    float: right;
+section.filters button {
+    background-color: #FF5A5F;
     height: 48px;
     width: 20%;
+    border: 0;
+    border-radius: 4px;
     font-size: 18px;
-    margin: 12px 30px;
+    color: #FFFFFF;
+    float: right;
+    margin: 11px 30px;
 }
-/*change opacity to 90% when the mouse is on the button*/
-.filters button:hover{
-    background-color: rgba(255, 90, 95, .9);
+section.filters button:hover {
+    opacity: .9;
 }
