--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,64 +1,55 @@
-/*
- * === Filters style ===
- */
-
-/* Filters style */
-.filters {
-    background-color: #ffffff;
+/* search bar */
+div.container {
+    max-width: 1000px;
+    margin: 30px auto;
+    text-align: center;
+}
+section.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #dddddd;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
 }
-/* Search button style */
-.filters button{
-    font-size: 18px;
-    background-color: #ff5a5f;
+section.filters button {
+    background-color: #FF5A5F;
     height: 48px;
     width: 20%;
+    border: 0;
     border-radius: 4px;
-    border: none;
-    color: #ffffff;
+    font-size: 18px;
+    color: #FFFFFF;
     float: right;
-    margin: 12px 30px;
+    margin: 11px 30px;
 }
-
-/*change opacity to 90% when the mouse is on the button*/
-.filters button:hover{
-    background-color: rgba(255, 90, 95, .9);
+section.filters button:hover {
+    opacity: .9;
 }
-
-/*locations and amenities*/
+/* location and amenities part of search bar */
 .locations,
 .amenities {
-    display: inline-block;
     height: 100%;
     width: 25%;
+    float: left;
 }
-/*locations*/
-.locations{
-    border-right: 1px solid #dddddd;
+.locations {
+    border-right: 1px solid #DDDDDD;
 }
-
-/* places header*/
-.filters h2,
-.filters h3,
-.filters h4 {
-    -webkit-box-sizing: border-box;
-      -moz-box-sizing: border.box;
-            box-sizing: border-box;
-            margin: 0;
-}
-/* Header 3 style */
-.filters h3 {
-    font-size: 1.17em;
+.locations h3,
+.amenities h3 {
     font-weight: 600;
-    height: 50%;
-    padding: 15.5px 0 0 30px;
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+    text-align: left;
+    margin-left: 30px;
 }
-.filters h4 {
-    font-size: 14px;
+.locations h4,
+.amenities h4 {
     font-weight: 400;
-    height: 50%;
-    padding: 5px 0 12px 30px;
+    font-size: 14px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: left;
+    margin-left: 30px;
 }
