--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,91 +1,65 @@
+/* boxed list structure of places */
 .places {
-	justify-content: center;
-	align-items: center;
-	margin-left: 10px;
-	margin-right: 5px;
+  text-align: center;
 }
 .places h1 {
-	font-size: 30px;
+  font-size: 30px;
+  text-align: left;
 }
-.listing {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	margin-bottom: 8%;
+article {
+  width: 390px;
+  border: 1px solid #FF5A5F;
+  border-radius: 4px;
+  padding: 20px;
+  margin: 20px;
+  display: inline-block;
+  min-height: 250px;
+  vertical-align: top;
 }
-.places article {
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: 1px solid #ff5a5f;
-	border-radius: 4px;
+article h2 {
+  font-size: 30px;
+  margin-top: 5px;
 }
-.places h2 {
-	font-size: 30px;
-	text-align: center;
-	margin: auto;
+/* structure within boxed lists of places */
+div.price_by_night {
+color: #FF5A5F;
+  border: 4px solid #FF5A5F;
+  border-radius: 100%;
+  min-width: 60px;
+  height: 60px;
+  line-height: 60px;
+  font-size: 30px;
+  position: relative;
+  float: right;
+  top: -80px; 
 }
-.list-motel{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	margin-top: 0px;
-	margin-bottom: 10px;
+div.information {
+  height: 80px;
+  border-top: 1px solid #DDDDDD;
+  border-bottom: 1px solid #DDDDDD;
 }
-.price_by_night {
-	align-items: center;
-	min-width: 60px;
-	height: 60px;
-	font-size: 30px;
-	color: #ff5a5f;
-	border: 4px solid #ff5a5f;
-	border-radius: 50%;
-	padding: 5px;
-	justify-content: center;
-
+div.max_guest,
+div.number_rooms,
+div.number_bathrooms {
+  line-height: 140px;
+  width: 100px;
+  height: 100%;
+  display: inline-block;
+  background-position: 50% 5px;
+  background-repeat: no-repeat;
 }
-.price_by_night p {
-	margin-top: 15px;
-	text-align: center;
-}
-
-.information {
-	height: 80px;
-	border-top:1px solid #dddddd;
-	border-bottom: 1px solid #dddddd;
-	display: flex;
-	justify-content: center;
-}
-
-.information p {
-	padding-top: 35px;
-	text-align: center;
-}
-.max_guest, .number_rooms, .number_bathrooms {
-	width: 100px;
-} 
 .max_guest {
-	background: url('../images/icon_group.png') no-repeat;
-	margin-top: 6px;
-	background-position-x: center ;
+  background-image: url("../images/icon_group.png");
 }
 .number_rooms {
-	background: url('../images/icon_bed.png') no-repeat;
-	margin-top: 6px;
-	margin-left: 10px;
-	margin-right: 10px;
-	background-position-x:center ;
+  background-image: url("../images/icon_bed.png");
 }
 .number_bathrooms {
-	background: url('../images/icon_bath.png') no-repeat;
-	margin-top: 6px;
-	background-position-x: center;
+  background-image: url("../images/icon_bath.png");
 }
-.places .user {
-  margin: 20px auto 20px auto;
-}
-
-footer {
-	position: relative;
+div.user,
+div.description {
+  text-align: left;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
