--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -2,8 +2,10 @@ footer {
     background-color: #00FF00;
     height: 60px;
     width: 100%;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    line-height: 60px;
+    margin-top: auto;
+    align-items: center;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
