--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,9 +2,12 @@ footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    border-top: 1px solid #CCCCCC;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    line-height: 60px;
+    margin-top: auto;
+    align-items: center;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    border-top: 1px #CCCCCC solid;
 }
