--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,26 +1,28 @@
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
-}
-section.filters {
+.filters {
     background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: 1px  #DDDDDD solid;
     border-radius: 4px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
-section.filters button {
+
+.filters button {
+    font-size: 18px;
     background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    border: none;
     border-radius: 4px;
-    font-size: 18px;
-    color: #FFFFFF;
-    float: right;
-    margin: 11px 30px;
+    margin-right: 30px;
+    opacity: 100%;
 }
-section.filters button:hover {
-    opacity: .9;
+
+.filters button:hover {
+    opacity: 90%;
 }
