--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,55 +1,50 @@
-/* search bar */
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
-}
-section.filters {
+.filters {
     background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: 1px  #DDDDDD solid;
     border-radius: 4px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
-section.filters button {
+
+.filters button {
+    font-size: 18px;
     background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    border: none;
     border-radius: 4px;
-    font-size: 18px;
-    color: #FFFFFF;
-    float: right;
-    margin: 11px 30px;
+    margin-right: 30px;
+    opacity: 100%;
+    /* align-self:; */
 }
-section.filters button:hover {
-    opacity: .9;
+
+.filters button:hover {
+    opacity: 90%;
 }
-/* location and amenities part of search bar */
-.locations,
-.amenities {
-    height: 100%;
+
+.filters .locations {
+    /* height: 100%; */
     width: 25%;
-    float: left;
+    border-right: #DDDDDD 1px solid;
 }
-.locations {
-    border-right: 1px solid #DDDDDD;
+
+.filters .amenities {
+    /* height: 100%; */
+    width: 25%;
+    /* margin-top: auto; */
 }
-.locations h3,
-.amenities h3 {
+
+.filters h3 {
     font-weight: 600;
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
 }
-.locations h4,
-.amenities h4 {
+
+.filters h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
 }
