--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,76 +1,106 @@
-/* search bar */
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    /* text-align: center; */
-}
-section.filters {
+.filters {
     background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: 1px  #DDDDDD solid;
     border-radius: 4px;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
-section.filters button {
+
+.filters button {
+    font-size: 18px;
     background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    border: none;
     border-radius: 4px;
-    font-size: 18px;
-    color: #FFFFFF;
-    float: right;
-    margin: 11px 30px;
+    margin-right: 30px;
+    opacity: 100%;
+    /* align-self:; */
 }
-section.filters button:hover {
-    opacity: .9;
+
+.filters button:hover {
+    opacity: 90%;
 }
-/* location and amenities part of search bar */
-.locations,
-.amenities {
+
+.filters .locations {
+    border-right: #DDDDDD 1px solid;
+}
+
+.filters .amenities, .filters .locations {
+    align-self: center;
+    flex: 1;
     height: 100%;
     width: 25%;
-    float: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: flex-start; */
+    padding-left: 50px;
 }
-.locations {
-    border-right: 1px solid #DDDDDD;
-}
-.locations h3,
-.amenities h3 {
+
+.filters h3 {
     font-weight: 600;
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
 }
-.locations h4,
-.amenities h4 {
+
+.filters h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
 }
-/* display location and amenities options upon hover */
-.popover {
+
+.filters .locations .popover {
     display: none;
+    position: absolute;
     background-color: #FAFAFA;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    position: relative;
+    width: 25%;
+    border: #DDDDDD 1px solid;
     z-index: 1;
+    border-radius: 4px;
+    max-width: 343px;
+    margin: 235px 0 0 -50px;
+    /* padding-left: 40px; */
+    padding: 0 0 20px 40px;
 }
-.popover h2 {
-    font-size: 16px;
+
+.filters .amenities .popover {
+    display: none;
+    position: absolute;
+    background-color: #FAFAFA;
+    width: 25%;
+    border: #DDDDDD 1px solid;
+    z-index: 1;
+    border-radius: 4px;
+    max-width: 200px;
+    margin: 179px 0 0 -50px;
+    /* padding-left: 40px; */
+    padding: 0 0 20px 40px;
 }
-li {
-    list-style-type: none;
-    margin-top:10px;
-    margin-bottom: 10px;
+
+.filters .locations .popover .inner-list {
+    padding-left: 10px;
+    /* padding: 0px 0 0px 10px; */
 }
-.locations:hover .popover,
-.amenities:hover .popover {
+
+.filters .locations ul li, .filters .amenities ul li {
+    list-style: none;
+}
+
+.filters .locations:hover .popover, .filters .amenities:hover .popover{
     display: block;
+}
+
+
+.filters .locations ul h2{
+    font-size: 16px;
+    margin-top: 20px;
+}
+
+.filters .amenities ul li:first-child  {
+    margin-top: 20px;
 }
