--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,65 +1,92 @@
-/* boxed list structure of places */
 .places {
-  text-align: center;
+    margin-top: 30px;
+    display: flex;
+    /* box-sizing: border-box; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* border: #FF5A5F 2px solid; */
 }
+
+.places h1, .places h2 {
+    font-size: 30px;
+}
+
+.places article {
+    width: 390px;
+    min-width: 390px;
+    margin: 20px;
+    padding: 20px;
+    border: #FF5A5F 1px solid;
+    border-radius: 4px;
+    text-align: center;
+    
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+
 .places h1 {
-  font-size: 30px;
-  text-align: left;
+    width: 100%;
 }
-article {
-  width: 390px;
-  border: 1px solid #FF5A5F;
-  border-radius: 4px;
-  padding: 20px;
-  margin: 20px;
-  display: inline-block;
-  min-height: 250px;
-  vertical-align: top;
+
+.places h2 {
+    width: 80%;
+    margin-left: 02px;
+    /* border: #FF5A5F 2px solid; */
 }
-article h2 {
-  font-size: 30px;
-  margin-top: 5px;
+
+.places .price_by_night {
+    color:  #FF5A5F;
+    border: #FF5A5F 4px solid;
+    border-radius: 50%;
+    font-size: 30px;
+
+    height: 60px;
+    min-width: 60px;
+    line-height: 55px;
+    display: table-cell;  /* enables me center text */
+    vertical-align: middle; /* enables me center text */
+     
+    /* margin-left: auto; */
+    
 }
-/* structure within boxed lists of places */
-div.price_by_night {
-color: #FF5A5F;
-  border: 4px solid #FF5A5F;
-  border-radius: 100%;
-  min-width: 60px;
-  height: 60px;
-  line-height: 60px;
-  font-size: 30px;
-  position: relative;
-  float: right;
-  top: -80px; 
+
+.max_guest, .number_rooms, .number_bathrooms {
+    margin-top: 20px;
+    flex: 1 1 auto;
+    border-top: #CCCCCC 1px solid;
+    border-bottom: #CCCCCC 1px solid;
+    padding: 5px 0 60px 0;
+    width: 100px;
 }
-div.information {
-  height: 80px;
-  border-top: 1px solid #DDDDDD;
-  border-bottom: 1px solid #DDDDDD;
+
+.max_guest p{
+    background: url("../images/icon_group.png") no-repeat top center;
+    height: 250%;
+    padding-bottom: 2px;
 }
-div.max_guest,
-div.number_rooms,
-div.number_bathrooms {
-  line-height: 140px;
-  width: 100px;
-  height: 100%;
-  display: inline-block;
-  background-position: 50% 5px;
-  background-repeat: no-repeat;
+
+.number_rooms p{
+    background: url("../images/icon_bed.png") no-repeat top center;
+    height: 250%;
+    padding-bottom: 2px;
 }
-.max_guest {
-  background-image: url("../images/icon_group.png");
+
+.number_bathrooms p{
+    background: url("../images/icon_bath.png") no-repeat top center;
+    height: 250%;
+    padding-bottom: 2px;
 }
-.number_rooms {
-  background-image: url("../images/icon_bed.png");
+
+.user, .description {
+    padding-top: 10px;
+    margin-right: auto;
+    text-align: justify;
 }
-.number_bathrooms {
-  background-image: url("../images/icon_bath.png");
-}
-div.user,
-div.description {
-  text-align: left;
-  margin-bottom: 10px;
-  margin-top: 10px;
+
+.user .owner-title {
+    font-weight: 700;
 }
